--- a/package.json
+++ b/package.json
@@ -80,7 +80,13 @@
     "mongodb": "^6.21.0",
     "multer": "^1.4.5-lts.1",
     "xlsx": "^0.18.5",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "vite": "^5.4.19",
+    "typescript": "^5.8.3",
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8.5.6",
+    "autoprefixer": "^10.4.21",
+    "@vitejs/plugin-react-swc": "^3.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -90,19 +96,13 @@
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react-swc": "^3.11.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "jest": "^30.2.0",
     "lovable-tagger": "^1.1.13",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.4.6",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "typescript-eslint": "^8.38.0"
   }
 }
