--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
     "tailwindcss": "^3.4.17",
     "postcss": "^8.5.6",
     "autoprefixer": "^10.4.21",
-    "@vitejs/plugin-react-swc": "^3.11.0"
+    "@vitejs/plugin-react-swc": "^3.11.0",
+    "lovable-tagger": "^1.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -101,7 +102,6 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "jest": "^30.2.0",
-    "lovable-tagger": "^1.1.13",
     "ts-jest": "^29.4.6",
     "typescript-eslint": "^8.38.0"
   }
